--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ Icon
 # Thumbnails
 ._*
 
+
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
@@ -207,3 +208,48 @@ _testmain.go
 *.exe
 *.test
 *.prof
+#PRAKASH added eclipse gitignore files
+*.pydevproject
+.metadata
+.gradle
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+
+
+# Eclipse Core
+.project
+
+
+# External tool builders
+.externalToolBuilders/
+
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+
+# CDT-specific
+.cproject
+
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+
+# PDT-specific
+.buildpath
+
+
+# sbteclipse plugin
+.target
+
+
+# TeXlipse plugin
+.texlipse
